--- a/components/posts/styles/Post.module.scss
+++ b/components/posts/styles/Post.module.scss
@@ -1,19 +1,41 @@
 .box {
-  display: grid;
-  grid-template-columns: 40% 60%;
-  border: 1px solid #dedede;
   margin-bottom: 3rem;
-
-  img {
-    display: block;
-    width: 100%;
-    height: auto;
-  }
-
-  &Content {
-    padding-left: 2rem;
-  }
+  border: 1px solid #dedede;
+  border-radius: 3px;
   &:last-child {
     margin-bottom: 0;
+  }
+  &__featured {
+    display: block;
+    img {
+      display: block;
+      width: 100%;
+      height: auto;
+    }
+  }
+
+  &__content {
+    padding: 2rem;
+  }
+  &__title {
+    margin-bottom: 0;
+  }
+  &__meta {
+    display: flex;
+    span {
+      margin-right: 1rem;
+    }
+  }
+
+  &__link {
+    color: #1e1e1e;
+    &:hover {
+      color: #007bff;
+    }
+  }
+
+  &__readmore {
+    display: flex;
+    justify-content: flex-end;
   }
 }
