--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -13,7 +13,7 @@ body {
   font-size: 1.6rem;
   box-sizing: inherit;
   background-color: #fff;
-  color: #5e5e5e;
+  color: #9e9e9e;
   line-height: 1.6;
 }
 
@@ -28,7 +28,14 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 30px;
+  margin: 0 0 20px;
+  color: #1e1e1e;
+}
+p {
+  margin: 0 0 15px;
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
 a {
@@ -38,7 +45,7 @@ a {
   transition: all 0.3s ease-in-out 0s;
 
   &:hover {
-    color: #da4453;
+    color: #007bff;
   }
 }
 
