--- a/components/layout/styles/Header.module.scss
+++ b/components/layout/styles/Header.module.scss
@@ -1,6 +1,6 @@
 .header {
   border-top: 0.5rem solid #007bff;
-  border-bottom: 1px solid #dedede;
+  border-bottom: 0.1rem solid #dedede;
 }
 
 .headerInner {
